--- a/interactive_tetris/web/templates/room/index.html.eex
+++ b/interactive_tetris/web/templates/room/index.html.eex
@@ -1,32 +1,31 @@
-<h2>Listing rooms</h2>
+<section class="centered">
+  <h2>Listing rooms</h2>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Score</th>
-      <th>Active</th>
-      <th>Author</th>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Score</th>
+        <th>Author</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+  <%= for room <- @rooms do %>
+      <tr class="<%= active_room(room) %>">
+        <td><%= room.name %></td>
+        <td><%= room.score %></td>
+        <td><%= room.author.username %></td>
+        <td class="inlined">
+          <%= link "Delete", to: room_path(@conn, :delete, room), method: :delete, data: [confirm: "Are you sure?"] %> |
+          <%= link "Join", to: room_path(@conn, :join, room) %>
+        </td>
+      </tr>
+  <% end %>
+    </tbody>
+  </table>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for room <- @rooms do %>
-    <tr>
-      <td><%= room.name %></td>
-      <td><%= room.score %></td>
-      <td><%= room.active %></td>
-      <td><%= room.author %></td>
-
-      <td class="text-right">
-        <%= link "Show", to: room_path(@conn, :show, room), class: "btn btn-default btn-xs" %>
-        <%= link "Edit", to: room_path(@conn, :edit, room), class: "btn btn-default btn-xs" %>
-        <%= link "Delete", to: room_path(@conn, :delete, room), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<%= link "New room", to: room_path(@conn, :new) %>
+  <div class="form-group">
+    <%= link "New room", to: room_path(@conn, :new) %>
+  </div>
+</section>
