--- a/interactive_tetris/web/templates/layout/app.html.eex
+++ b/interactive_tetris/web/templates/layout/app.html.eex
@@ -19,6 +19,11 @@
     <main class="container">
       <h1>Tetris!</h1>
 
+      <section class="centered">
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+        <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      </section>
+
       <%= render @view_module, @view_template, assigns %>
     </main>
 
