Delete improvements and Connected games displaying.

--- a/interactive_tetris/web/templates/game/summary.html.eex
+++ b/interactive_tetris/web/templates/game/summary.html.eex
@@ -16,6 +16,11 @@
       <strong>Author:</strong>
       <%= @room.author.username %>
     </li>
+
+    <li>
+      <strong>Connected users:</strong>
+      <%= length(@room.connected_users) %>
+    </li>
   </ul>
 
   <%= link "Back", to: room_path(@conn, :index) %>
