--- a/interactive_tetris/web/templates/room/new.html.eex
+++ b/interactive_tetris/web/templates/room/new.html.eex
@@ -10,7 +10,7 @@
 
     <div class="form-group">
       <%= label field, :name, class: "control-label" %>
-      <%= text_input field, :name, placeholder: "Put room name here..." %>
+      <%= text_input field, :name, placeholder: "Put room name here...", autofocus: true %>
       <%= error_tag field, :name %>
     </div>
     <div class="form-group">
