--- a/interactive_tetris/web/templates/game/game.html.eex
+++ b/interactive_tetris/web/templates/game/game.html.eex
@@ -13,5 +13,5 @@
   <canvas id="game" width="500" height="600"></canvas>
 </section>
 
-<aside class="history">
+<aside class="history" id="history-container">
 </aside>
