--- a/interactive_tetris/web/templates/room/join.html.eex
+++ b/interactive_tetris/web/templates/room/join.html.eex
@@ -23,5 +23,5 @@
     </li>
   </ul>
 
-  <%= link "Back", to: room_path(@conn, :index) %>, <%= link "Join", to: game_path(@conn, :game, @room.id) %>
+  <%= link "Join", to: game_path(@conn, :game, @room.id) %>
 </section>
